--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
@@ -83,12 +83,12 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/notificationToggleTextView"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="SAVE POST"
+                android:text="@string/groups.save_post"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
+                android:visibility="gone"
                 app:fontName="open_sans.ttf" />
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -97,7 +97,6 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/commentToggleTextView"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
                 android:text="ENABLE NOTIFICATION"
@@ -111,10 +110,9 @@
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/reportPostTextView"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="DISABLE COMMENTS"
+                android:text="@string/groups.disable_comment"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
@@ -124,10 +122,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="REPORT POST"
+                android:text="@string/groups.report_post"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
@@ -137,10 +134,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="DELETE POST"
+                android:text="@string/groups.delete_post"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 android:visibility="gone"
@@ -151,10 +147,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="BLOCK THE USER"
+                android:text="@string/groups.block_this_user"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 android:visibility="gone"
@@ -165,10 +160,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="PIN THIS POST TO TOP"
+                android:text="@string/groups.pin_post"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 android:visibility="gone"
