--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_reported_content_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_reported_content_activity.xml
@@ -71,10 +71,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="No Action Required"
+                android:text="@string/groups.no_action"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
@@ -84,10 +83,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="Hide Content"
+                android:text="@string/groups.hide_content"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
@@ -97,10 +95,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:drawableLeft="@drawable/ic_bookmark"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="Block This User"
+                android:text="@string/groups.block_this_user"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
