--- a/MyCity4Kids/MyCity4Kids/res/layout/report_post_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/report_post_dialog_fragment.xml
@@ -38,7 +38,7 @@
             android:id="@+id/reason2RadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/report.spam"
+            android:text="@string/report.religious"
             android:textColor="@color/short_story.light_black_color"
             app:buttonTint="@color/short_story.blue" />
 
@@ -46,10 +46,25 @@
             android:id="@+id/reason3RadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/report.not_relevant"
+            android:text="@string/report.spam"
             android:textColor="@color/short_story.light_black_color"
             app:buttonTint="@color/short_story.blue" />
 
+        <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/reason4RadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/report.inappro"
+            android:textColor="@color/short_story.light_black_color"
+            app:buttonTint="@color/short_story.blue" />
+
+        <android.support.v7.widget.AppCompatRadioButton
+            android:id="@+id/reason5RadioButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/report.not_relevant"
+            android:textColor="@color/short_story.light_black_color"
+            app:buttonTint="@color/short_story.blue" />
     </RadioGroup>
 
 </LinearLayout>
