--- a/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
@@ -164,8 +164,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:padding="14dp"
-            android:src="@drawable/ic_followers" />
+            android:padding="10dp"
+            android:src="@drawable/ic_add_image" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/togglePollOptionTextView"
@@ -177,15 +177,15 @@
             android:layout_toRightOf="@+id/togglePollOptionImageView"
             android:gravity="center_vertical"
             android:paddingRight="10dp"
-            android:text="@string/groups.add_image" />
+            android:text="@string/groups.image_poll" />
 
         <ImageView
             android:id="@+id/anonymousImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/anonymousTextView"
-            android:padding="14dp"
-            android:src="@drawable/ic_followers" />
+            android:padding="10dp"
+            android:src="@drawable/ic_incognito" />
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/anonymousTextView"
