--- a/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
@@ -49,7 +49,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:padding="12dp"
-                android:text="POST"
+                android:text="@string/editor.publish"
                 android:textColor="@color/editor.publish"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -111,7 +111,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:padding="10dp"
-        android:src="@drawable/ic_email" />
+        android:src="@drawable/ic_add_image" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/addMediaTextView"
@@ -133,7 +133,7 @@
         android:layout_alignParentBottom="true"
         android:layout_toLeftOf="@+id/anonymousTextView"
         android:padding="10dp"
-        android:src="@drawable/ic_followers" />
+        android:src="@drawable/ic_incognito" />
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/anonymousTextView"
@@ -154,6 +154,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:button="@drawable/language_selector_checkbox"
         android:checked="false"
         android:focusable="false"
@@ -194,7 +195,7 @@
                 android:layout_marginTop="23dp"
                 android:paddingLeft="23dp"
                 android:paddingRight="23dp"
-                android:text="@string/groups.choose_media"
+                android:text="@string/choose_article_image.toolbar.title"
                 android:textColor="@color/videos.dialog.title"
                 android:textSize="18sp"
                 app:fontName="oswald_regular.ttf" />
@@ -225,31 +226,31 @@
                 android:textSize="18sp"
                 app:fontName="oswald.ttf" />
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/videoCameraTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingLeft="23dp"
-                android:paddingRight="23dp"
-                android:paddingTop="10dp"
-                android:text="Capture video from camera"
-                android:textColor="@color/videos.upload_option.camera"
-                android:textSize="18sp"
-                app:fontName="oswald.ttf" />
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoCameraTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Capture video from camera"-->
+            <!--android:textColor="@color/videos.upload_option.camera"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/videoGalleryTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingLeft="23dp"
-                android:paddingRight="23dp"
-                android:paddingTop="10dp"
-                android:text="Choose video from gallery"
-                android:textColor="@color/videos.upload_option.gallery"
-                android:textSize="18sp"
-                app:fontName="oswald.ttf" />
+            <!--<com.mycity4kids.widget.CustomFontTextView-->
+            <!--android:id="@+id/videoGalleryTextView"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:paddingBottom="10dp"-->
+            <!--android:paddingLeft="23dp"-->
+            <!--android:paddingRight="23dp"-->
+            <!--android:paddingTop="10dp"-->
+            <!--android:text="Choose video from gallery"-->
+            <!--android:textColor="@color/videos.upload_option.gallery"-->
+            <!--android:textSize="18sp"-->
+            <!--app:fontName="oswald.ttf" />-->
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/cancelTextView"
