--- a/MyCity4Kids/MyCity4Kids/res/layout/group_join_confirmation_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_join_confirmation_fragment.xml
@@ -29,7 +29,7 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center"
         android:padding="20dp"
-        android:text="lorem ipsum bangala vedeshi pritam vidrohi abe chalna lorem ipsum bangala vedeshi pritam vidrohi abe chalna lorem ipsum bangala vedeshi pritam vidrohi abe chalna"
+        android:text="@string/groups.approval_req_sent"
         android:textColor="@color/groups.light_black_color"
         android:textSize="16sp"
         app:fontName="open_sans.ttf" />
