--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_fragment.xml
@@ -52,7 +52,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:padding="10dp"
-            android:text="SEE ALL"
+            android:text="@string/ad.view_all_tags.text"
             android:textColor="@color/groups.blue_color"
             android:textSize="14sp"
             android:visibility="gone"
@@ -65,7 +65,7 @@
             android:layout_below="@+id/seeAllJoinedGpTextView"
             android:layout_marginTop="20dp"
             android:padding="10dp"
-            android:text="SUGGESTED GROUPS"
+            android:text="@string/groups.all_groups"
             android:textColor="@color/groups.light_black_color"
             android:textSize="16sp"
             android:visibility="gone"
@@ -93,7 +93,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:padding="10dp"
-            android:text="SEE ALL"
+            android:text="@string/ad.view_all_tags.text"
             android:textColor="@color/groups.blue_color"
             android:textSize="14sp"
             android:visibility="gone"
