Groups First Release

--- a/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_poll_group_post_activity.xml
@@ -70,7 +70,7 @@
         android:layout_below="@+id/toolbarUnderline"
         android:background="@null"
         android:gravity="left|top"
-        android:hint="Ask Something... "
+        android:hint="@string/groups.ask_something"
         android:maxLines="4"
         android:minLines="3"
         android:paddingBottom="20dp"
