--- a/MyCity4Kids/MyCity4Kids/res/layout/group_about_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_about_item.xml
@@ -8,14 +8,12 @@
         android:id="@+id/groupDescTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/aboutLabelTextView"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="15dp"
         android:ellipsize="end"
         android:gravity="left"
-        android:maxLines="3"
-        android:text="dwaa dawd aw d adwwad dwadw dwad wad awd awd dddcvdf grtd g vxrfg xfvcx refdzc zewdfczcfe sxfvxz aw dczxdfr awa cdf cdfraw waer gvt yghv czsde awef v cvzw dawd dasd sadfc vxgjuyifgf grec resa rcxf gdfvczd "
+        android:text=""
         android:textColor="@color/black"
         android:textSize="14sp"
         app:fontName="georgia.ttf" />
@@ -73,7 +71,7 @@
         android:layout_marginTop="14dp"
         android:layout_toRightOf="@+id/groupAdminLabelTextView"
         android:gravity="left"
-        android:text="RAMESH"
+        android:text=""
         android:textColor="@color/blue_bg"
         android:textSize="14sp"
         app:fontName="open_sans.ttf" />
