--- a/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_text_group_post_activity.xml
@@ -80,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left|top"
-                android:hint="Ask Something... "
+                android:hint="@string/groups.ask_something"
                 android:paddingBottom="28dp"
                 android:paddingLeft="18dp"
                 android:paddingRight="18dp"
