--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -75,6 +75,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignRight="@+id/groupImageView"
                     android:layout_alignTop="@+id/groupImageView"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:clickable="true"
                     android:padding="12dp"
                     android:src="@drawable/ic_share_white" />
             </RelativeLayout>
@@ -149,6 +151,8 @@
                         android:layout_height="42dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:clickable="true"
                         android:padding="8dp"
                         android:src="@drawable/ic_group_settings" />
                 </RelativeLayout>
@@ -263,7 +267,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="POLL"
+                android:text="@string/groups.sections.polls"
                 android:textColor="@color/white"
                 android:visibility="visible"
                 app:fontName="oswald.ttf" />
@@ -295,7 +299,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="POST"
+                android:text="@string/groups.post_label"
                 android:textColor="@color/white"
                 android:visibility="visible"
                 app:fontName="oswald.ttf" />
